--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-functional": "^4.4.0",
     "eslint-plugin-import": "^2.22.0",
     "jest": "^29.0.3",
+    "jest-junit": "^14.0.1",
     "np": "^7.6.2",
     "npm-run-all": "^4.1.5",
     "open-cli": "^7.0.1",
